[package]
name = "fusionamm-client"
version = "1.0.0"
description = "Rust client to interact with on-chain FusionAMM program."
include = ["src/*"]
homepage = "https://fusionamm.com"
license-file = "LICENSE"
repository = "https://github.com/DefiTuna/fusionamm-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["info@fusionamm.com"]
edition = "2021"

[features]
default = ["core-types"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = []
core-types = ["dep:fusionamm-core"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = []
solana-v1 = []

[dependencies]
# Solana
solana-rpc-client = { version = "^3.1" }
solana-rpc-client-api = { version = "^3.1" }
solana-account-decoder = { version = "^3.1" }
solana-account = { version = "^3.0" }
solana-program = { version = "^3.0" }
solana-pubkey = { version = "^3.0" }
solana-program-entrypoint = { version = "^3.1" }
solana-decode-error = { version = "^2.3" }
solana-program-error = { version = "^3.0" }
solana-msg = { version = "^3.0" }
solana-instruction = { version = "^3.4" }
solana-cpi = { version = "^3.1" }
solana-account-info = { version = "^3.1" }

# Anchor
anchor-lang = { version = "1.0.0", optional = true }

# Other dependencies
borsh = { version = "^1.5", features = ["derive"] }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
fusionamm-core = { path = "../core", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
thiserror = { version = "^2.0" }
